# py-behav-box-v2

./: .gitignore  .gitmodules  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Workstation.py  environment.yml  mkdocs.yml  py-behav.bat  pyproject.toml  test.py
Components/: Component.py  FoodDispenser.py  Lever.py  Light.py  NosePoke.py  Speaker.py  Toggle.py  TouchScreen.py  Video.py
Defaults/: DPALHabituation1.csv  DPALHabituation2.csv  DPALInitTouch.csv  DPALMustInit.csv  FearConditioning.csv  FiveChoice.csv  SetShift.csv
Elements/: BarPressElement.py  ButtonElement.py  CircleLightElement.py  Element.py  FoodLightElement.py  InfoBoxElement.py  LabelElement.py  NosePokeElement.py  RectangleLightElement.py  ShockElement.py  StateElement.py  TouchScreenElement.py  draw_filled_arc.py  draw_light.py
Events/: CSVEventLogger.py  ConsoleLogger.py  Event.py  EventLogger.py  FileEventLogger.py  FinalStateEvent.py  GS4EventLogger.py  GUIEventLogger.py  InitialStateEvent.py  OEEvent.py  OENetworkLogger.py  TextEventLogger.py
GUIs/: DPALGUI.py  DPALHabituation1GUI.py  DPALHabituation2GUI.py  DPALInitTouchGUI.py  FearConditioningGUI.py  FiveChoiceGUI.py  GUI.py  SetShiftGUI.py
Sources/: DIOSource.py  EmptySource.py  EmptyTouchScreenSource.py  Source.py  VideoSource.py  WhiskerTouchScreenSource.py
Tasks/: Bandit.py  DPAL.py  DPALHabituation1.py  DPALHabituation2.py  DPALInitTouch.py  DPALMustInit.py  FearConditioning.py  FiveChoice.py  SetShift.py  Task.py
Utilities/: dictionary_to_save_string.py  read_protocol_variable.py
(+284 files in other folders)
